--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
-
+@import '../styles/mixins.scss';
 
 // Spacing
 
@@ -34,3 +34,32 @@ $font-orbitron: "Orbitron", "sans-sarif";
 
 $breakpoint-tablet : 768px;
 $breakpoint-desktop : 400px;
+
+//Type colour
+
+$colours : (
+	normal: #A8A77A,
+	fire: #EE8130,
+	water: #6390F0,
+	electric: #F7D02C,
+	grass: #7AC74C,
+	ice: #96D9D6,
+	fighting: #C22E28,
+	poison: #A33EA1,
+	ground: #E2BF65,
+	flying: #A98FF3,
+	psychic: #F95587,
+	bug: #A6B91A,
+	rock: #B6A136,
+	ghost: #735797,
+	dragon: #6F35FC,
+	dark: #705746,
+	steel: #B7B7CE,
+	fairy: #D685AD
+);
+
+@each $colour, $value in $colours {
+    .pokemon__content--#{$colour} {
+        @include button-style($value);
+    }
+}
