--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -13,7 +13,7 @@
 }
 
 
-@mixin page-layout($Yaxis, $Xaxis) {
+@mixin page-layout ($Yaxis, $Xaxis) {
     max-width: 1440px;
     margin: $Yaxis $Xaxis;
 
@@ -82,6 +82,19 @@
     padding: $indent__base 0;
   }
 
+}
+@mixin button-style($color: $color-bright-red ){
+  background-color:lighten($color, 80%);
+  color: $color-mailbu;
+  border: 2px solid $color;
+  border-radius: 10px;
+  padding: $indent__base;
+
+  &:hover {
+    background-color: $color-white;
+    color: $color-dark-gray;
+    cursor: pointer;
+  }
 }
 
 @mixin responsive-tablet {
